<resources>
    <string name="app_name">Cactus Notes</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="email_is_required">Email is required.</string>
    <string name="username_is_required">Username is required.</string>
    <string name="username_is_too_short">Username is too short.</string>
    <string name="username_is_too_long">Username is too long.</string>
    <string name="username_only_include">Username can only include a–z, 0–9 and _ characters.</string>
    <string name="password_is_required">Password is required.</string>
    <string name="password_is_short">Password is too short.</string>
    <string name="password_is_long">Password is too long.</string>
    <string name="password_must_contain">Password must contain one digit, one uppercase letter, one lowercase letter and one special character.</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="email_or_username_is_required">Email or username is required</string>
    <string name="email_or_username">Email or Username</string>
    <string name="registered">You are registered now.</string>
    <string name="some_error_occurred">Some error occurred. Please try again later.</string>
    <string name="couldnt_connect_to_servers">Couldn’t connect to the servers. Please check your connection.</string>
    <string name="succesfull">Succesfull</string>
    <string name="you_don_t_have_any_notes_click_below_button_to_add_one">You don’t have any notes. Click below button to add one!</string>
    <string name="remember">Remember</string>
    <string name="doing_is_important">Doing is important!</string>

</resources>