<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".signup.SignUpActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailorUsernameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_or_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailorUsernameTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogInTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLogInTextInputEditText"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@+id/passwordLogInTextInputEditText"
            android:layout_marginTop="16dp"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/buttonCreate"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@+id/buttonSignUp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/create_an_account" />
    </LinearLayout>
</ScrollView>